deployment/keel-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keel
  namespace: keel
spec:
  template:
    spec:
      containers:
      - name: keel
        volumeMounts:
        - name: google-credentials
          mountPath: /google-credentials
          readOnly: true
      volumes:
      - name: google-credentials
        secret:
          secretName: gcr-json-key
