deployment/opencost-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: opencost
  namespace: opencost
spec:
  selector:
    app: opencost
  ports:
  - name: http
    port: 9003
    targetPort: 9003
  - name: ui
    port: 9090
    targetPort: 9090
  type: ClusterIP
