deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: astro-blog-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - neuraldiwan.xyz
    - www.neuraldiwan.xyz
    secretName: astro-blog-tls
  rules:
  - host: neuraldiwan.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: astro-blog-service
            port: 
              number: 80
  - host: www.neuraldiwan.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: astro-blog-service
            port: 
              number: 80
